fix(admin): add covers, localize

--- a/components/common/ui/table.module.scss
+++ b/components/common/ui/table.module.scss
@@ -84,4 +84,8 @@
       font-size: 0.7rem;
     }
   }
+
+  &__cover-thumbnail {
+    width: 90px;
+  }
 }
